[project]
name = "gramgate"
version = "1.0.0"
description = "Lightweight Telegram gateway — expose your account as REST API and MCP server for AI agents, bots, and automation"
requires-python = ">=3.10"
dependencies = [
    "pyrofork>=2.3",
    "tgcrypto>=1.2",
    "httpx>=0.28",
    "pydantic-settings>=2.0",
    "starlette>=0.37",
    "mcp>=1.0",
    "uvicorn>=0.30",
]

[project.scripts]
gramgate = "gramgate.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gramgate"]
